--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>App</title>
   <base href="/">
-
+  <!-- Materialize ICONS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -12,3 +13,4 @@
   <app-root></app-root>
 </body>
 </html>
+ 
